--- a/src/style.scss
+++ b/src/style.scss
@@ -8,10 +8,16 @@
 }
 
 @font-face {
-  font-family: 'Nasa';
-  src: url('../public/fonts/nasa.ttf') format('truetype');
+  font-family: "Nasa";
+  src: url("/public/fonts/nasa.ttf") format("truetype");
   font-weight: normal;
-  font-style: normal; 
+  font-style: normal;
+}
+@font-face {
+  font-family: "Montserrat-Regular";
+  src: url("/public/fonts/montserrat-regular.otf") format("opentype");
+  font-weight: normal;
+  font-style: normal;
 }
 
 html {
@@ -21,15 +27,14 @@ html {
 body {
   background-color: var(--cream); /* Deep background color */
   color: var(--crimson); /* Text color */
-  font-family: 'Nasa', sans-serif !important;
+  font-family: "Montserrat-Regular", sans-serif !important;
   line-height: 1.6;
 }
 
 a {
   color: var(--crimson);
   text-decoration: none;
-  display: inline-flex
-;
+  display: inline-flex;
 }
 
 a:hover,
@@ -38,11 +43,12 @@ a:focus {
 }
 
 button {
-  background-color: var(--crimson); /* Button background */
-  color: var(--crimson); /* Button text */
+  background-color: var(--crimson);
+  color: var(--cream);
   border: none;
   padding: 0.5em 1em;
   cursor: pointer;
+  border-radius: 10px;
 }
 
 button:hover {
@@ -64,40 +70,73 @@ img {
   height: auto;
 }
 
-input {
-  padding: 10px;
-  border: 2px solid var(--crimson);
+input,
+textarea {
+  padding: 5px 10px;
+  border: 1px solid var(--crimson);
   border-radius: 10px;
-  background: transparent;
-
-  &:focus {
-    outline: none;
-  }
+  background: #fff;
+}
+input:focus {
+  outline: none;
 }
 
 select {
-  padding: 10px;
+  padding: 5px;
   border-radius: 10px;
   border: 2px solid var(--crimson);
   background: var(--crimson);
   color: #fff;
-
-  &:focus {
-    outline: none;
-  }
+}
+select:focus {
+  outline: none;
 }
 
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 5px 10px;
+  padding: 10px 15px;
   background: var(--crimson);
   color: var(--cream);
-  font-size: 35px;
-  font-family: 'Nasa', sans-serif !important;
+  font-size: 20px;
+  // font-family: "Nasa", sans-serif !important;
+
+  span {
+    color: var(--cream);
+  }
 }
+
 .list {
+  padding: 10px;
+}
+
+.chord {
+  color: var(--crimson);
+  position: absolute;
+  top: -20px;
+}
+
+.word-container {
+  display: inline-block;
+  margin-right: 10px;
+  position: relative;
+}
+
+.word {
+  color: var(--forest);
+
+}
+
+.line {
+  margin-bottom: 25px
+}
+
+.lyrics {
+  margin-top: 50px;
+}
+
+.song-page-container {
   padding: 20px;
 }
 
