--- a/src/style.scss
+++ b/src/style.scss
@@ -25,10 +25,14 @@ html {
 }
 
 body {
-  background-color: var(--cream); /* Deep background color */
-  color: var(--crimson); /* Text color */
+  background-color: var(--sage);
+  color: var(--crimson);
   font-family: "Montserrat-Regular", sans-serif !important;
   line-height: 1.6;
+
+  & * {
+    font-family: "Montserrat-Regular", sans-serif !important;
+  }
 }
 
 a {
@@ -70,34 +74,39 @@ img {
   height: auto;
 }
 
-.ant-input-number-outlined {
-  border: 1px solid var(--crimson) !important;
-  border-radius: 6px !important;
-  background: #fff !important;
+.ant-input-number-outlined,
+.ant-input-number-outlined:hover,
+.ant-input-number-outlined:focus,
+.ant-input-number-outlined:focus-within {
+  background: transparent !important;
+  border: none !important;
+  border-radius: 0 !important;
+  width: 50px !important;
+  border-bottom: 3px solid var(--charcoal) !important;
+  font-size: 24px;
+  position: absolute;
+  bottom: -55px;
+  right: 0;
+  z-index: 2;
 
-  &:hover {
-    border: 1px solid var(--ruby) !important;
-  }
-
-  &:focus,
-  &:focus-within {
-    border: 1px solid var(--ruby) !important;
-    box-shadow: 0 0 0 2px #97074721 !important;
-  }
-
-  & .ant-input-number-handler:hover .ant-input-number-handler-up-inner,
-  & .ant-input-number-handler:hover .ant-input-number-handler-down-inner {
-    color: var(--crimson) !important;
+  input {
+    color: var(--charcoal) !important;
   }
 }
 
 
-input,
-textarea {
-  padding: 5px 10px;
-  border: 1px solid var(--crimson);
-  border-radius: 6px;
-  background: #fff;
+input, textarea {
+  padding: 10px 0px;
+  background: transparent;
+  border: none;
+  border-bottom: 2px solid var(--cream);
+  font-size: 24px;
+  caret-color: var(--cream);
+  color: var(--cream);
+
+  &::placeholder {
+    color: var(--cream)
+  }
 }
 input:focus {
   outline: none;
@@ -114,27 +123,54 @@ select:focus {
   outline: none;
 }
 
-.header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px 15px;
-  background: var(--crimson);
-  color: var(--cream);
-  font-size: 20px;
-  // font-family: "Nasa", sans-serif !important;
+// .header {
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   padding: 21px 15px;
+//   background: var(--charcoal);
+//   font-size: 40px;
+//   text-transform: uppercase;
+//   font-weight: 600;
+//   color: var(--cream);
+//   // font-family: "Nasa", sans-serif !important;
+// }
 
-  span {
-    color: var(--cream);
+.header {
+  height: 70px;
+  width: 100%;
+}
+
+.catScrollButtonBox {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  gap: 15px;
+  padding: 20px 0;
+}
+
+.catScrollButton,
+.catScrollButton:hover {
+  background-color: var(--cream);
+  color: var(--sage);
+  border: none;
+  padding: 2px 10px;
+  cursor: pointer;
+  font-size: 16px;
+  border-radius: 6px;
+  opacity: .5;
+
+  &.active {
+    opacity: 1;
   }
 }
 
 .list {
-  padding: 10px;
+  padding: 30px;
 }
 
 .chord {
-  color: var(--crimson);
+  color: var(--cream);
   position: absolute;
   top: -20px;
 }
@@ -146,7 +182,7 @@ select:focus {
 }
 
 .word {
-  color: var(--forest);
+  color: var(--cream);
 
 }
 
@@ -155,17 +191,59 @@ select:focus {
 }
 
 .lyrics {
-  margin-top: 20px;
+  margin-top: 120px;
   overflow-y: auto;
   height: 60vh;
   padding-top: 20px;
+  background-color: var(--charcoal);
+  padding: 30px;
 }
 
 .song-page-container {
-  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+  .song-page-header {
+    position: relative;
+    width: 292px;
+    height: 292px;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    flex-direction: column;
+    
+    &> svg {
+      position: absolute;
+      z-index: -1;
+      left: 0;
+      top: 0;
+    }
+
+    h3 {
+      color: var(--charcoal);
+      font-weight: 600;
+      text-transform: uppercase;    
+      margin-top: 85px  ;
+      margin-bottom: 0;
+      font-size: 24px;
+      line-height: 35px;
+    }
+
+    h4 {
+      color: var(--charcoal);
+      font-weight: 400;
+      font-size: 16px;
+    }
+  }
 }
 
 .scroll-button {
+  position: absolute;
+  left: 30px;
+  top: 20px;
+  z-index: 2;
+
   button {
     width: max-content;
     display: flex;
@@ -193,10 +271,107 @@ select:focus {
   scrollbar-width: none; 
 }
 
+.addButtonContainer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  justify-content: start;
+  align-items: center;
+}
+
+.addButton {
+  justify-content: center;
+  display: flex;
+  border-radius: 100px;
+  align-items: center;
+  width: 100px;
+  height: 100px;
+  z-index: 1;
+}
+
+.wave {
+  position: absolute;
+  width: 60%;
+  z-index: -1;
+  
+  &.top.right {
+    top:0;
+    right:0;
+    transform: rotateX(180deg) rotateY(180deg);
+  }
+  &.top.left {
+    top:0;
+    left:0;
+    transform: rotateX(180deg);
+  }
+  &.bottom.right {
+    bottom:0;
+    right:0;
+    transform: rotateY(180deg);
+  }
+  &.bottom.left {
+    bottom:0;
+    left:0;
+  }
+
+}
+
+.songInfoBox {
+  padding: 20px 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 20px;
+
+  .songInfo {
+    color: var(--cream);
+    font-size: 16px;
+    margin: 0;
+
+    &.songTitle {
+      text-transform: uppercase;
+      font-weight: 600;
+      font-size: 24px;
+    }
+  }
+}
+
+.waveCont {
+  position: fixed;
+  width: 100%;
+  z-index: -1;
+
+  &.top {
+    top: 0;
+  }
+  &.left {
+    left: 0;
+  }
+  &.bottom {
+    bottom: 0;
+  }
+  &.right {
+    right: 0;
+  }
+}
+
+.bg-wave {
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: calc(100% + 20px);
+}
+
+.lyricsCont {
+  position: relative;
+  width: 100%;
+}
+
 :root {
-  --mocha: #7C7370;
-  --crimson: #6A1D2D;
-  --forest: #0D1A10;
-  --cream: #FEF5EC;
-  --ruby: #970747;
+  --sienna: #8C5B3B;
+  --charcoal: #242424;
+  --terracotta: #B46E4C;
+  --cream: #FEF1DE;
+  --sage: #64826A;
 }
