--- a/src/style.scss
+++ b/src/style.scss
@@ -52,16 +52,16 @@ a:focus {
 }
 
 button {
-  background-color: var(--crimson);
+  background-color: var(--sienna);
   color: var(--cream);
   border: none;
-  padding: 0.5em 1em;
+  padding: 25px;
   cursor: pointer;
-  border-radius: 6px;
-}
-
-button:hover {
-  background-color: var(--crimson); /* Button hover background */
+  border-radius: 100px;
+  width: 80px;
+  height: 80px;
+  box-shadow: 3px 4px 10px rgba(0, 0, 0, 0.1490196078);
+  margin: 30px 0;
 }
 
 ul,
@@ -101,20 +101,20 @@ img {
 
 
 input, textarea {
-  padding: 10px 0px;
-  background: transparent;
-  border: none;
-  border-bottom: 2px solid var(--cream);
-  font-size: 24px;
-  caret-color: var(--cream);
-  color: var(--cream);
+  padding: 10px 0px !important;
+  background: transparent !important;
+  border-radius: 0 !important;
+  border: none !important;
+  border-bottom: 2px solid var(--cream) !important;
+  font-size: 24px !important;
+  caret-color: var(--cream) !important;
+  color: var(--cream) !important;
+  max-width: 100% !important;
+  outline: none !important;
 
   &::placeholder {
-    color: var(--cream)
+    color: var(--cream) !important;
   }
-}
-input:focus {
-  outline: none;
 }
 
 select {
@@ -151,7 +151,9 @@ select:focus {
   justify-content: start;
   align-items: center;
   gap: 15px;
-  padding: 20px 0;
+  padding: 20px 30px;
+  overflow-x: auto;
+  margin: 0 -30px;
 }
 
 .catScrollButton,
@@ -164,14 +166,26 @@ select:focus {
   font-size: 16px;
   border-radius: 6px;
   opacity: .5;
+  width: inherit;
+  height: inherit;
+  box-shadow: none;
+  margin: 0;
 
   &.active {
     opacity: 1;
   }
 }
 
-.list {
+.list-filter {
   padding: 30px;
+  margin-top: 20px;
+}
+
+.list {
+  padding: 0 30px;
+  max-height: calc(100vh - 260px);
+  padding-bottom: 170px;
+  overflow-y: auto;
 }
 
 .chord {
@@ -217,6 +231,7 @@ select:focus {
     justify-content: start;
     align-items: center;
     flex-direction: column;
+    z-index: 1;
     
     &> svg {
       position: absolute;
@@ -345,16 +360,15 @@ select:focus {
 .waveCont {
   position: fixed;
   width: 100%;
-  z-index: -1;
 
   &.top {
-    top: 0;
+    top: -1px;
   }
   &.left {
     left: 0;
   }
   &.bottom {
-    bottom: 0;
+    bottom: -1px;
   }
   &.right {
     right: 0;
@@ -372,6 +386,62 @@ select:focus {
   position: relative;
   width: 100%;
 }
+
+.add-song {
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  padding: 30px;
+  position: relative;
+  padding-top: 130px;
+
+  > h1 {
+    color: var(--cream);
+    font-weight: 600;
+    position: absolute;
+    top: -30px;
+    right: 25px;
+    font-size: 22px;
+    max-width: 40vw;
+    line-height: 30px;
+    letter-spacing: 1px;
+  }
+}
+
+.add-word-box {
+  display: inline-block;
+  margin-right: 10px;
+}
+
+.add-line {
+  margin-bottom: 20px;
+  color: var(--cream);
+  font-size: 18px;
+  position: relative;
+}
+
+.add-chord {
+  color: black;
+  position: absolute;
+  top: -20px;
+}
+
+.add-chord-input {
+  position: absolute;
+  top: -55px;
+  width: 100px;
+  background: var(--charcoal) !important;
+  border-radius: 10px !important;
+  padding: 5px 10px !important;
+}
+
+.home-bg-wave {
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  width: 100%;
+}
+
 :root {
   --sienna: #8C5B3B;
   --charcoal: #242424;
