--- a/src/style.scss
+++ b/src/style.scss
@@ -96,6 +96,8 @@ img {
 
   input {
     color: var(--charcoal) !important;
+    border-bottom: 0 !important;
+    padding: 0 !important;
   }
 }
 
@@ -232,6 +234,7 @@ select:focus {
     align-items: center;
     flex-direction: column;
     z-index: 1;
+    margin-bottom: 10px;
     
     &> svg {
       position: absolute;
@@ -315,22 +318,22 @@ select:focus {
   z-index: -1;
   
   &.top.right {
-    top:-1;
+    top:-1px;
     right:0;
     transform: rotateX(180deg) rotateY(180deg);
   }
   &.top.left {
-    top:-1;
+    top:-1px;
     left:0;
     transform: rotateX(180deg);
   }
   &.bottom.right {
-    bottom:-1;
+    bottom:-1px;
     right:0;
     transform: rotateY(180deg);
   }
   &.bottom.left {
-    bottom:-1;
+    bottom:-1px;
     left:0;
   }
 
@@ -440,6 +443,19 @@ select:focus {
   z-index: -1;
   top: 0;
   width: 100%;
+}
+
+.playButton {
+  background: transparent;
+  box-shadow: none;
+  padding: 0;
+  width: max-content;
+  height: max-content;
+  margin: 0;
+}
+
+.parsed-lyrics {
+  margin-top: 40px;
 }
 
 :root {
