--- a/src/style.scss
+++ b/src/style.scss
@@ -343,7 +343,7 @@ select:focus {
   padding: 20px 10px;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: start;
   justify-content: center;
   margin-bottom: 20px;
 
@@ -351,6 +351,10 @@ select:focus {
     color: var(--cream);
     font-size: 16px;
     margin: 0;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: calc(100vw - 225px);
 
     &.songTitle {
       text-transform: uppercase;
