--- a/src/style.scss
+++ b/src/style.scss
@@ -1,54 +1,304 @@
-/* Reset styles */
-*,
-*::before,
-*::after {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+html,body {
+  width: 100%;
+  height: 100%
 }
 
-@font-face {
-  font-family: "Nasa";
-  src: url("/public/fonts/nasa.ttf") format("truetype");
-  font-weight: normal;
-  font-style: normal;
+input::-ms-clear,input::-ms-reveal {
+  display: none
 }
-@font-face {
-  font-family: "Montserrat-Regular";
-  src: url("/public/fonts/montserrat-regular.otf") format("opentype");
-  font-weight: normal;
-  font-style: normal;
+
+*,*:before,*:after {
+  box-sizing: border-box
 }
 
 html {
-  font-size: 100%;
+  font-family: sans-serif;
+  line-height: 1.15;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -ms-overflow-style: scrollbar;
+  -webkit-tap-highlight-color: rgba(0,0,0,0)
+}
+
+@-ms-viewport {
+  width: device-width
+}
+
+body {
+  margin: 0
+}
+
+[tabindex="-1"]:focus {
+  outline: none
+}
+
+hr {
+  box-sizing: content-box;
+  height: 0;
+  overflow: visible
+}
+
+h1,h2,h3,h4,h5,h6 {
+  margin-top: 0;
+  margin-bottom: .5em;
+  font-weight: 500
+}
+
+p {
+  margin-top: 0;
+  margin-bottom: 1em
+}
+
+abbr[title],abbr[data-original-title] {
+  -webkit-text-decoration: underline dotted;
+  text-decoration: underline;
+  text-decoration: underline dotted;
+  border-bottom: 0;
+  cursor: help
+}
+
+address {
+  margin-bottom: 1em;
+  font-style: normal;
+  line-height: inherit
+}
+
+input[type=text],input[type=password],input[type=number],textarea {
+  -webkit-appearance: none
+}
+
+ol,ul,dl {
+  margin-top: 0;
+  margin-bottom: 1em
+}
+
+ol ol,ul ul,ol ul,ul ol {
+  margin-bottom: 0
+}
+
+dt {
+  font-weight: 500
+}
+
+dd {
+  margin-bottom: .5em;
+  margin-left: 0
+}
+
+blockquote {
+  margin: 0 0 1em
+}
+
+dfn {
+  font-style: italic
+}
+
+b,strong {
+  font-weight: bolder
+}
+
+small {
+  font-size: 80%
+}
+
+sub,sup {
+  position: relative;
+  font-size: 75%;
+  line-height: 0;
+  vertical-align: baseline
+}
+
+sub {
+  bottom: -.25em
+}
+
+sup {
+  top: -.5em
+}
+
+pre,code,kbd,samp {
+  font-size: 1em;
+  font-family: SFMono-Regular,Consolas,Liberation Mono,Menlo,Courier,monospace
+}
+
+pre {
+  margin-top: 0;
+  margin-bottom: 1em;
+  overflow: auto
+}
+
+figure {
+  margin: 0 0 1em
+}
+
+img {
+  vertical-align: middle;
+  border-style: none
+}
+
+a,area,button,[role=button],input:not([type=range]),label,select,summary,textarea {
+  touch-action: manipulation
+}
+
+table {
+  border-collapse: collapse
+}
+
+caption {
+  padding-top: .75em;
+  padding-bottom: .3em;
+  text-align: left;
+  caption-side: bottom
+}
+
+input,button,select,optgroup,textarea {
+  margin: 0;
+  color: inherit;
+  font-size: inherit;
+  font-family: inherit;
+  line-height: inherit
+}
+
+button,input {
+  overflow: visible
+}
+
+button,select {
+  text-transform: none
+}
+
+button,html [type=button],[type=reset],[type=submit] {
+  -webkit-appearance: button
+}
+
+button::-moz-focus-inner,[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner {
+  padding: 0;
+  border-style: none
+}
+
+input[type=radio],input[type=checkbox] {
+  box-sizing: border-box;
+  padding: 0
+}
+
+input[type=date],input[type=time],input[type=datetime-local],input[type=month] {
+  -webkit-appearance: listbox
+}
+
+textarea {
+  overflow: auto;
+  resize: vertical
+}
+
+fieldset {
+  min-width: 0;
+  margin: 0;
+  padding: 0;
+  border: 0
+}
+
+legend {
+  display: block;
+  width: 100%;
+  max-width: 100%;
+  margin-bottom: .5em;
+  padding: 0;
+  color: inherit;
+  font-size: 1.5em;
+  line-height: inherit;
+  white-space: normal
+}
+
+progress {
+  vertical-align: baseline
+}
+
+[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button {
+  height: auto
+}
+
+[type=search] {
+  outline-offset: -2px;
+  -webkit-appearance: none
+}
+
+[type=search]::-webkit-search-cancel-button,[type=search]::-webkit-search-decoration {
+  -webkit-appearance: none
+}
+
+::-webkit-file-upload-button {
+  font: inherit;
+  -webkit-appearance: button
+}
+
+output {
+  display: inline-block
+}
+
+summary {
+  display: list-item
+}
+
+template {
+  display: none
+}
+
+[hidden] {
+  display: none!important
+}
+
+mark {
+  padding: .2em;
+  background-color: #feffe6
+}
+
+*,*:before,*:after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box
+}
+
+@font-face {
+  font-family: Nasa;
+  src: url(/assets/nasa-32004372.ttf) format("truetype");
+  font-weight: 400;
+  font-style: normal
+}
+
+@font-face {
+  font-family: Montserrat-Regular;
+  src: url(/assets/montserrat-regular-a68806f7.otf) format("opentype");
+  font-weight: 400;
+  font-style: normal
+}
+
+html {
+  font-size: 100%
 }
 
 body {
   background-color: var(--sage);
   color: var(--crimson);
-  font-family: "Montserrat-Regular", sans-serif !important;
-  line-height: 1.6;
+  font-family: Montserrat-Regular,sans-serif!important;
+  line-height: 1.6
+}
 
-  & * {
-    font-family: "Montserrat-Regular", sans-serif !important;
-  }
+body * {
+  font-family: Montserrat-Regular,sans-serif!important
 }
 
 #root {
-  overflow: hidden;
+  overflow: hidden
 }
-
 
 a {
   color: var(--crimson);
   text-decoration: none;
-  display: inline-flex;
+  display: inline-flex
 }
 
-a:hover,
-a:focus {
-  color: var(--crimson); /* Hover and focus state */
+a:hover,a:focus {
+  color: var(--crimson)
 }
 
 button {
@@ -60,63 +310,58 @@ button {
   border-radius: 100px;
   width: 80px;
   height: 80px;
-  box-shadow: 3px 4px 10px rgba(0, 0, 0, 0.1490196078);
-  margin: 30px 0;
+  box-shadow: 3px 4px 10px #00000026;
+  margin: 30px 0
 }
 
-ul,
-ol {
-  list-style: none;
+ul,ol {
+  list-style: none
 }
 
 table {
   border-collapse: collapse;
-  width: 100%;
+  width: 100%
 }
 
 img {
   max-width: 100%;
-  height: auto;
+  height: auto
 }
 
-.ant-input-number-outlined,
-.ant-input-number-outlined:hover,
-.ant-input-number-outlined:focus,
-.ant-input-number-outlined:focus-within {
-  background: transparent !important;
-  border: none !important;
-  border-radius: 0 !important;
-  width: 50px !important;
-  border-bottom: 3px solid var(--charcoal) !important;
+.ant-input-number-outlined,.ant-input-number-outlined:hover,.ant-input-number-outlined:focus,.ant-input-number-outlined:focus-within {
+  background: transparent!important;
+  border: none!important;
+  border-radius: 0!important;
+  width: 50px!important;
+  border-bottom: 3px solid var(--charcoal)!important;
   font-size: 20px;
   position: absolute;
-  bottom: -55px;
+  bottom: -40px;
   right: 0;
-  z-index: 2;
-
-  input {
-    color: var(--charcoal) !important;
-    border-bottom: 0 !important;
-    padding: 0 !important;
-  }
+  z-index: 2
 }
 
+.ant-input-number-outlined input,.ant-input-number-outlined:hover input,.ant-input-number-outlined:focus input,.ant-input-number-outlined:focus-within input {
+  color: var(--charcoal)!important;
+  border-bottom: 0!important;
+  padding: 0!important
+}
 
-input, textarea {
-  padding: 10px 0px !important;
-  background: transparent !important;
-  border-radius: 0 !important;
-  border: none !important;
-  border-bottom: 2px solid var(--cream) !important;
-  font-size: 20px !important;
-  caret-color: var(--cream) !important;
-  color: var(--cream) !important;
-  max-width: 100% !important;
-  outline: none !important;
+input,textarea {
+  padding: 10px 0!important;
+  background: transparent!important;
+  border-radius: 0!important;
+  border: none!important;
+  border-bottom: 2px solid var(--cream)!important;
+  font-size: 20px!important;
+  caret-color: var(--cream)!important;
+  color: var(--cream)!important;
+  max-width: 100%!important;
+  outline: none!important
+}
 
-  &::placeholder {
-    color: var(--cream) !important;
-  }
+input::placeholder,textarea::placeholder {
+  color: var(--cream)!important
 }
 
 select {
@@ -124,28 +369,16 @@ select {
   border-radius: 6px;
   border: 2px solid var(--crimson);
   background: var(--crimson);
-  color: #fff;
-}
-select:focus {
-  outline: none;
+  color: #fff
 }
 
-// .header {
-//   display: flex;
-//   justify-content: center;
-//   align-items: center;
-//   padding: 21px 15px;
-//   background: var(--charcoal);
-//   font-size: 40px;
-//   text-transform: uppercase;
-//   font-weight: 600;
-//   color: var(--cream);
-//   // font-family: "Nasa", sans-serif !important;
-// }
+select:focus {
+  outline: none
+}
 
 .header {
   height: 70px;
-  width: 100%;
+  width: 100%
 }
 
 .catScrollButtonBox {
@@ -155,11 +388,10 @@ select:focus {
   gap: 15px;
   padding: 20px 30px;
   overflow-x: auto;
-  margin: 0 -30px;
+  margin: 0 -30px
 }
 
-.catScrollButton,
-.catScrollButton:hover {
+.catScrollButton,.catScrollButton:hover {
   background-color: var(--cream);
   color: var(--sage);
   border: none;
@@ -171,45 +403,43 @@ select:focus {
   width: inherit;
   height: inherit;
   box-shadow: none;
-  margin: 0;
+  margin: 0
+}
 
-  &.active {
-    opacity: 1;
-  }
+.catScrollButton.active,.catScrollButton:hover.active {
+  opacity: 1
 }
 
 .list-filter {
   padding: 30px;
-  margin-top: 20px;
+  margin-top: 20px
+}
 
-  input {
-    width: 100%;
-    max-width: 480px !important;
-  }
+.list-filter input {
+  width: 100%;
+  max-width: 480px!important
 }
 
 .list {
-  padding: 0 30px;
+  padding: 0 30px 170px;
   max-height: calc(100vh - 260px);
-  padding-bottom: 170px;
-  overflow-y: auto;
+  overflow-y: auto
 }
 
 .chord {
   color: var(--cream);
   position: absolute;
-  top: -20px;
+  top: -20px
 }
 
 .word-container {
   display: inline-block;
   margin-right: 10px;
-  position: relative;
+  position: relative
 }
 
 .word {
-  color: var(--cream);
-
+  color: var(--cream)
 }
 
 .line {
@@ -217,86 +447,85 @@ select:focus {
 }
 
 .lyrics {
-  margin-top: 120px;
+  margin-top: 15vw;
   overflow-y: auto;
   height: 60vh;
-  padding-top: 20px;
   background-color: var(--charcoal);
-  padding: 30px;
+  padding: 30px
 }
 
 .song-page-container {
   display: flex;
   flex-direction: column;
+  align-items: center
+}
+
+.song-page-container .song-page-header {
+  position: relative;
+  width: 292px;
+  height: 292px;
+  display: flex;
+  justify-content: start;
   align-items: center;
-  
-  .song-page-header {
-    position: relative;
-    width: 292px;
-    height: 292px;
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    flex-direction: column;
-    z-index: 1;
-    margin-bottom: 10px;
-    
-    &> svg {
-      position: absolute;
-      z-index: -1;
-      left: 0;
-      top: 0;
-    }
+  flex-direction: column;
+  z-index: 1;
+  margin-bottom: 10px
+}
 
-    h3 {
-      color: var(--charcoal);
-      font-weight: 600;
-      text-transform: uppercase;    
-      margin-top: 85px  ;
-      margin-bottom: 0;
-      font-size: 20px;
-      line-height: 35px;
-    }
+.song-page-container .song-page-header>svg {
+  position: absolute;
+  z-index: -1;
+  left: 0;
+  top: 0
+}
 
-    h4 {
-      color: var(--charcoal);
-      font-weight: 400;
-      font-size: 16px;
-    }
-  }
+.song-page-container .song-page-header h3 {
+  color: var(--charcoal);
+  font-weight: 600;
+  text-transform: uppercase;
+  margin-top: 85px;
+  margin-bottom: 0;
+  font-size: 20px;
+  line-height: 35px
+}
+
+.song-page-container .song-page-header h4 {
+  color: var(--charcoal);
+  font-weight: 400;
+  font-size: 16px
 }
 
 .scroll-button {
   position: absolute;
   left: 30px;
   top: 20px;
-  z-index: 2;
+  z-index: 2
+}
 
-  button {
-    width: max-content;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    background: transparent !important;
-    padding: 0;
-    position: absolute;
-    top: calc(50% - 12px);
-    right: 10px;
-  }
+.scroll-button button {
+  width: max-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  background: transparent!important;
+  padding: 0;
+  position: absolute;
+  top: calc(50% - 12px);
+  right: 10px
+}
 
-  .ant-input-number .ant-input-number-handler-wrap {
-    right: 35px;
-  }
+.scroll-button .ant-input-number .ant-input-number-handler-wrap {
+  right: 35px
 }
 
 #scrollRoll::-webkit-scrollbar {
-  display: none;
+  display: none
 }
 
 #scrollRoll {
   -ms-overflow-style: none;
-  scrollbar-width: none; 
+  scrollbar-width: none
 }
 
 .addButtonContainer {
@@ -304,7 +533,7 @@ select:focus {
   bottom: 0;
   width: 100%;
   justify-content: start;
-  align-items: center;
+  align-items: center
 }
 
 .addButton {
@@ -314,34 +543,37 @@ select:focus {
   align-items: center;
   width: 100px;
   height: 100px;
-  z-index: 1;
+  z-index: 1
 }
 
 .wave {
   position: absolute;
   width: 60%;
   z-index: -1;
-  
-  &.top.right {
-    top:-1px;
-    right:0;
-    transform: rotateX(180deg) rotateY(180deg);
-  }
-  &.top.left {
-    top:-1px;
-    left:0;
-    transform: rotateX(180deg);
-  }
-  &.bottom.right {
-    bottom:-1px;
-    right:0;
-    transform: rotateY(180deg);
-  }
-  &.bottom.left {
-    bottom:-1px;
-    left:0;
-  }
+  max-width: 220px;
+}
 
+.wave.top.right {
+  top: -1px;
+  right: 0;
+  transform: rotateX(180deg) rotateY(180deg)
+}
+
+.wave.top.left {
+  top: -1px;
+  left: 0;
+  transform: rotateX(180deg)
+}
+
+.wave.bottom.right {
+  bottom: -1px;
+  right: 0;
+  transform: rotateY(180deg)
+}
+
+.wave.bottom.left {
+  bottom: -1px;
+  left: 0
 }
 
 .songInfoBox {
@@ -350,113 +582,115 @@ select:focus {
   flex-direction: column;
   align-items: start;
   justify-content: center;
-  margin-bottom: 20px;
+  margin-bottom: 20px
+}
 
-  .songInfo {
-    color: var(--cream);
-    font-size: 14px;
-    margin: 0;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    max-width: calc(100vw - 225px);
+.songInfoBox .songInfo {
+  color: var(--cream);
+  font-size: 14px;
+  margin: 0;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: calc(100vw - 225px)
+}
 
-    &.songTitle {
-      text-transform: uppercase;
-      font-weight: 600;
-      font-size: 18px;
-    }
-  }
+.songInfoBox .songInfo.songTitle {
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 18px
 }
 
 .song-list-icon {
   width: 20vw;
   min-width: 100px;
-  max-width: 200px;
+  max-width: 200px
 }
 
 .waveCont {
   position: fixed;
-  width: 100%;
+  width: 100%
+}
 
-  &.top {
-    top: -1px;
-  }
-  &.left {
-    left: 0;
-  }
-  &.bottom {
-    bottom: -1px;
-  }
-  &.right {
-    right: 0;
-  }
+.waveCont.top {
+  top: -1px
+}
+
+.waveCont.left {
+  left: 0
+}
+
+.waveCont.bottom {
+  bottom: -1px
+}
+
+.waveCont.right {
+  right: 0
 }
 
 .bg-wave {
   left: 0;
   position: absolute;
   top: 0;
-  width: calc(100% + 20px);
+  width: calc(100% + 20px)
 }
 
 .lyricsCont {
   position: relative;
-  width: 100%;
+  width: 100%
 }
 
 .add-song {
   z-index: 1;
   display: flex;
   flex-direction: column;
-  padding: 30px;
-  position: relative;
-  padding-top: 130px;
+  padding: 130px 30px 30px;
+  position: relative
+}
 
-  > h1 {
-    color: var(--cream);
-    font-weight: 600;
-    position: absolute;
-    top: -30px;
-    right: 25px;
-    font-size: 22px;
-    max-width: 40vw;
-    line-height: 30px;
-    letter-spacing: 1px;
-  }
+.add-song>h1 {
+  color: var(--cream);
+  font-weight: 600;
+  position: absolute;
+  top: -30px;
+  right: 25px;
+  font-size: 22px;
+  max-width: 40vw;
+  line-height: 30px;
+  letter-spacing: 1px
 }
 
 .add-word-box {
   display: inline-block;
-  margin-right: 10px;
+  margin-right: 10px
 }
 
 .add-line {
   margin-bottom: 20px;
   color: var(--cream);
   font-size: 18px;
-  position: relative;
+  position: relative
 }
 
 .add-chord {
-  color: black;
+  color: #000;
   position: absolute;
-  top: -20px;
+  top: -20px
 }
 
 .add-chord-input {
   position: absolute;
   top: -55px;
   width: 100px;
-  background: var(--charcoal) !important;
-  border-radius: 10px !important;
-  padding: 5px 10px !important;
+  background: var(--charcoal)!important;
+  border-radius: 10px!important;
+  padding: 5px 10px!important
 }
 
 .home-bg-wave {
   position: absolute;
   z-index: -1;
-  top: 0;
+  top: -28vw;
   width: 100%;
 }
 
@@ -466,22 +700,27 @@ select:focus {
   padding: 0;
   width: max-content;
   height: max-content;
-  margin: 0;
+  margin: 0
 }
 
 .parsed-lyrics {
-  margin-top: 40px;
+  margin-top: 40px
 }
-
-// .filter-inner {
-//   display: flex;
-//   flex-direction: column;
-// }
 
 :root {
   --sienna: #8C5B3B;
   --charcoal: #242424;
   --terracotta: #B46E4C;
   --cream: #FEF1DE;
-  --sage: #64826A;
+  --sage: #64826A
+}
+
+@media (width > 480px) {
+  .list ul {
+      display: flex;  
+      flex-wrap: wrap;
+  }
+  .song {
+      flex-direction: column;
+  }
 }
