--- a/src/style.scss
+++ b/src/style.scss
@@ -391,7 +391,10 @@ select:focus {
   margin: 0 -30px
 }
 
-.catScrollButton,.catScrollButton:hover {
+.catScrollButton,
+.catScrollButton:hover,
+.popup button,
+.popup button:hover {
   background-color: var(--cream);
   color: var(--sage);
   border: none;
@@ -399,15 +402,15 @@ select:focus {
   cursor: pointer;
   font-size: 16px;
   border-radius: 6px;
-  opacity: .5;
-  width: inherit;
-  height: inherit;
+  width: max-content;
+  height: max-content;
   box-shadow: none;
-  margin: 0
-}
-
-.catScrollButton.active,.catScrollButton:hover.active {
-  opacity: 1
+  opacity: 1;
+  margin: 0;
+  
+  &.catScrollButton:not(.active) {
+    opacity: .5;
+  }
 }
 
 .list-filter {
@@ -536,6 +539,10 @@ select:focus {
   width: 100px;
   height: 100px;
   z-index: 1;
+}
+
+.toTop {
+  z-index: 2;
 }
 
 .wave {
@@ -697,6 +704,93 @@ select:focus {
 
 .parsed-lyrics {
   margin-top: 40px
+}
+
+// swiping
+li {
+  list-style: none;
+  width: 100%;
+  transition: transform 0.3s ease-out; /* Smooth return animation */
+}
+
+.popup {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1000;
+  color: var(--charcoal);
+  font-weight: 600;
+  text-transform: uppercase;
+  width: 75vw;
+  height: 75vw;
+  justify-content: end;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 20px;
+  padding: 0;
+  background: transparent;
+
+  .button-group {
+    display: flex;
+    gap: 20px;
+    position: absolute;
+    bottom: 20%;
+  }
+
+  p {
+    margin: 0 0 15px;
+    text-align: center;
+    position: absolute;
+    top: 38%;
+    max-width: 70%;
+    background: var(--cream);
+    font-size: 13px;
+  }
+}
+
+span.delete-popup {
+  width: 100%;
+}
+
+// background color
+.bg-sienna {
+  background-color: #8C5B3B !important;
+  color: #FEF1DE !important;
+}
+.bg-charcoal {
+  background-color: #242424 !important;
+  color: #FEF1DE !important;
+}
+.bg-terracotta {
+  background-color: #B46E4C !important;
+  color: #FEF1DE !important;
+}
+.bg-cream {
+  background-color: #FEF1DE !important;
+  color: #64826A !important;
+}
+.bg-sage {
+  background-color: #64826A !important;
+  color: #FEF1DE !important;
+}
+
+// text color
+.tc-sienna {
+  color: #8C5B3B !important;
+}
+.tc-charcoal {
+  color: #242424 !important;
+}
+.tc-terracotta {
+  color: #B46E4C !important;
+}
+.tc-cream {
+  color: #FEF1DE !important;
+}
+.tc-sage {
+  color: #64826A !important;
 }
 
 :root {
