--- a/src/style.scss
+++ b/src/style.scss
@@ -439,10 +439,11 @@ select:focus {
 
 .lyrics {
   margin-top: 15vw;
+  padding-top: 55px !important;
   overflow-y: auto;
   height: 60vh;
   background-color: var(--charcoal);
-  padding: 30px
+  padding: 30px;
 }
 
 .song-page-container {
@@ -570,7 +571,6 @@ select:focus {
   align-items: start;
   justify-content: center;
   margin-bottom: 20px;
-  width: 100%;
 }
 
 .songInfoBox .songInfo {
@@ -641,10 +641,11 @@ select:focus {
   font-weight: 600;
   position: absolute;
   top: -30px;
-  right: 20px;
-  font-size: 23px;
+  right: 15px;
+  font-size: 16px;
   max-width: 45vw;
-  line-height: 27px;
+  letter-spacing: 1px;
+  line-height: 22px;
 }
 
 .add-word-box {
@@ -724,17 +725,27 @@ li {
   display: flex;
   gap: 20px;
   position: absolute;
-  bottom: 20%
+  bottom: -6%;
 }
 
 .popup p {
   margin: 0 0 15px;
   text-align: center;
   position: absolute;
-  top: 38%;
+  top: 45%;
   max-width: 70%;
   background: var(--cream);
-  font-size: 13px
+  font-size: 13px;
+}
+
+.popup-back {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  z-index: 5;
+  background: #00000078;
 }
 
 span.delete-popup {
@@ -787,20 +798,28 @@ span.delete-popup {
 }
 
 .flying {
+  position: absolute;
+  top: -10px;
+  
   input {
     width: 80px;
     margin-right: 5px;
-    background: var(--cream) !important;
+    background: rgba(254, 241, 222, 0.5411764706) !important;
     color: var(--charcoal) !important;
     caret-color: var(--charcoal) !important;
     border-radius: 8px !important;
     padding: 5px 10px !important;
     z-index: 10;
     position: relative;
+    height: 29px;
+    padding-right: 35px !important;
   }
   button {
     z-index: 10;
-    position: relative;
+    position: absolute;
+    right: 0;
+    background-color: var(--sienna) !important;
+    color: var(--cream) !important;
   }
 }
 
@@ -819,6 +838,7 @@ button.small:hover {
   opacity: 1;
   margin: 0;
   text-wrap: nowrap;
+  box-shadow: 1px 2px 3px #00000069;
 } 
 
 :root {
@@ -843,5 +863,9 @@ button.small:hover {
       flex-direction: column;
       width: min-content;
       align-items: center;
+  }
+
+  .songInfoBox {
+    width: 100%;
   }
 }
