--- a/src/style.scss
+++ b/src/style.scss
@@ -359,10 +359,25 @@ input, textarea {
   max-width: 420px;
   outline: none !important;
   width: 100%;
-}
 
-input::placeholder,textarea::placeholder {
-  color: var(--cream)!important
+  &::placeholder {
+    color: var(--cream) !important;
+  }
+
+  &.filled {
+    background: #fef1de78 !important;
+    border-radius: 8px !important;
+    padding: 5px 10px !important;
+    color: var(--charcoal) !important;
+    caret-color: var(--charcoal) !important;
+    box-shadow: 4px 4px 15px #0000001c;
+    
+    &::placeholder {
+      color: var(--sage) !important;
+      font-size: 18px;
+      font-style: italic;
+    }
+  }
 }
 
 select {
@@ -379,7 +394,8 @@ select:focus {
 
 .header {
   height: 70px;
-  width: 100%
+  width: 100%;
+  z-index: -1;
 }
 
 .catScrollButtonBox {
@@ -389,11 +405,15 @@ select:focus {
   gap: 15px;
   padding: 20px 30px;
   overflow-x: auto;
-  margin: 0 -30px
-}
+  margin: 0 -30px;
 
-.catScrollButtonBox button:not(.active) {
-  opacity: .5
+  button {
+    box-shadow: none !important;
+  
+    &:not(.active) {
+      opacity: .5;
+    }
+  }
 }
 
 .list-filter {
@@ -596,7 +616,12 @@ select:focus {
 
 .waveCont {
   position: fixed;
-  width: 100%
+  width: 100%;
+  z-index: 1;
+
+  * {
+    z-index: 3000;
+  }
 }
 
 .waveCont.top {
@@ -631,7 +656,7 @@ select:focus {
   z-index: 1;
   display: flex;
   flex-direction: column;
-  padding: 130px 30px 30px;
+  padding: 90px 30px 30px;
   position: relative
 }
 
@@ -725,6 +750,12 @@ li {
   gap: 20px;
   position: absolute;
   bottom: -6%;
+}
+
+#addAsCodeBtn {
+  position: absolute;
+  right: 30px;
+  top: 10px;
 }
 
 .popup p {
@@ -837,8 +868,83 @@ button.small:hover {
   opacity: 1;
   margin: 0;
   text-wrap: nowrap;
-  box-shadow: 1px 2px 3px #00000069;
+  font-weight: 600;
+  box-shadow: 2px 2px 6px rgb(0 0 0 / 18%)
 } 
+
+.modal-addascode {
+  .ant-modal-content {
+      background: var(--charcoal);
+      padding: 0;
+  }
+
+  button.ant-modal-close {
+      display: none;
+  }
+
+  .ant-modal-title {
+      color: var(--cream);
+      text-transform: uppercase;
+      font-size: 16px;
+      text-align: center;
+  }
+
+  textarea.ant-input {
+    color: var(--cream) !important;
+    background: transparent !important;
+    border: none !important;
+    box-shadow: none;
+    padding: 15px !important;
+    font-size: 16px !important;
+
+    &::placeholder {
+      opacity: .7;
+      color: var(--sage) !important;
+    }
+  }
+
+  .ant-modal-header {
+      background: var(--sage);
+      border-radius: 8px 8px 0 0;
+      margin: 0;
+      padding: 20px 24px;
+      display: flex;
+      justify-content: start;
+      align-items: center;
+  }
+
+  .ant-modal-footer {
+    background: var(--sage);
+    border-radius: 0 0 8px 8px;
+    margin: 0;
+    padding: 20px 24px;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    flex-direction: row-reverse;
+    gap: 16px;
+      
+    button {
+      margin: 0 !important;
+      background: var(--cream);
+      color: var(--sage);
+      font-weight: 600;
+      box-shadow: 2px 2px 6px #0000004f;
+
+      &.ant-btn-variant-solid,
+      &.ant-btn-variant-solid:hover,
+      &.ant-btn-variant-solid:active,
+      &.ant-btn-variant-solid:focus {
+        background: var(--terracotta);
+        color: var(--cream);
+      }
+    }
+  }
+}
+
+.Toastify__toast-theme--colored.Toastify__toast--error {
+  background-color: var(--terracotta) !important;
+}
 
 :root {
   --sienna: #8C5B3B;
