message color bugfix

--- a/src/style.scss
+++ b/src/style.scss
@@ -1758,7 +1758,7 @@ button.small,button.small:hover {
 }
 
 .Toastify__toast-theme--colored.Toastify__toast--success {
-  background-color: var(--sage)!important
+  background-color: var(--success)!important
 }
 
 .Toastify__close-button {
